由于整体逻辑修改了，所以商户平台的demo也要随之修改（主要部分加密解密没有变）

--- a/src/main/resources/test.html
+++ b/src/main/resources/test.html
@@ -14,8 +14,7 @@
             reply=>{
                 console.log(reply)
                 var data = reply.data
-                $.ajax({
-                    url:"http://localhost:8080/url",
+                $.ajax("http://localhost:8080/url",{
                     method: 'POST',
                     data:JSON.stringify(data),
                     contentType:"application/json"
